--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-query-parameters",
+  "name": "use-url-parameters",
   "type": "module",
   "version": "1.0.0",
   "description": "",
