--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "exports": {
     ".": {
       "types": "./dist/index.js",
+      "import": "./dist/index.js",
       "default": "./dist/index.js"
     },
     "./package.json": "./package.json"
